@@ -10,7 +10,6 @@ import de.amr.games.pacman.lib.NavigationPoint;
 import de.amr.games.pacman.lib.Pulse;
 import de.amr.games.pacman.lib.RouteBasedSteering;
 import de.amr.games.pacman.model.GameLevel;
-import de.amr.games.pacman.model.GameModel;
 import org.tinylog.Logger;
 
 import java.util.List;
@@ -28,21 +27,20 @@ import static de.amr.games.pacman.event.GameEventManager.publishGameEvent;
  */
 public class MovingBonus extends Creature implements Bonus {
 
-    private final Pulse jumpAnimation;
+    private final Pulse jumpAnimation = new Pulse(10, false);
     private final RouteBasedSteering steering = new RouteBasedSteering();
     private final byte symbol;
     private final int points;
-    private long eatenTimer;
+    private long countdown;
     private byte state;
 
     public MovingBonus(byte symbol, int points) {
         super("MovingBonus-" + symbol);
-        reset();
         this.symbol = symbol;
         this.points = points;
-        jumpAnimation = new Pulse(10, false);
+        reset();
         canTeleport = false; // override default from Creature
-        eatenTimer = 0;
+        countdown = 0;
         state = Bonus.STATE_INACTIVE;
     }
 
@@ -58,8 +56,12 @@ public class MovingBonus extends Creature implements Bonus {
 
     @Override
     public String toString() {
-        return String.format("[MovingBonus state=%s symbol=%d value=%d eatenTimer=%d tile=%s]",
-            state, symbol(), points, eatenTimer, tile());
+        return "MovingBonus{" +
+            "symbol=" + symbol +
+            ", points=" + points +
+            ", countdown=" + countdown +
+            ", state=" + state +
+            '}';
     }
 
     @Override
@@ -79,33 +81,36 @@ public class MovingBonus extends Creature implements Bonus {
 
     @Override
     public void setInactive() {
-        state = Bonus.STATE_INACTIVE;
         jumpAnimation.stop();
-        hide();
         setSpeed(0);
+        hide();
+        state = Bonus.STATE_INACTIVE;
+        Logger.trace("Bonus gets inactive: {}", this);
     }
 
     @Override
     public void setEdible(long ticks) {
-        state = Bonus.STATE_EDIBLE;
         jumpAnimation.restart();
-        show();
         setSpeed(0.5f); // how fast in the original game?
         setTargetTile(null);
+        show();
+        countdown = ticks;
+        state = Bonus.STATE_EDIBLE;
+        Logger.trace("Bonus gets edible: {}", this);
     }
 
     @Override
     public void setEaten(long ticks) {
-        state = Bonus.STATE_EATEN;
-        eatenTimer = ticks;
         jumpAnimation.stop();
-        Logger.info("Bonus eaten: {}", this);
+        countdown = ticks;
+        state = Bonus.STATE_EATEN;
+        Logger.trace("Bonus eaten: {}", this);
     }
 
     public void setRoute(List<NavigationPoint> route, boolean leftToRight) {
-        centerOverTile(route.get(0).tile());
+        centerOverTile(route.getFirst().tile());
         setMoveAndWishDir(leftToRight ? Direction.RIGHT : Direction.LEFT);
-        route.remove(0);
+        route.removeFirst();
         steering.setRoute(route);
     }
 
@@ -119,41 +124,29 @@ public class MovingBonus extends Creature implements Bonus {
     @Override
     public void update(GameLevel level) {
         switch (state) {
-
-            case STATE_INACTIVE:
-                break; // nothing to do
-
-            case STATE_EDIBLE: {
-                if (sameTile(level.pac())) {
-                    level.game().scorePoints(points());
-                    setEaten(GameModel.BONUS_POINTS_SHOWN_TICKS);
-                    publishGameEvent(level.game(), GameEventType.BONUS_EATEN);
-                    return;
-                }
+            case STATE_INACTIVE -> {}
+            case STATE_EDIBLE -> {
                 steering.steer(level, this);
                 if (steering.isComplete()) {
+                    Logger.trace("Moving bonus reached target: {}", this);
                     setInactive();
-                    Logger.trace("Bonus left world: {}", this);
                     publishGameEvent(level.game(), GameEventType.BONUS_EXPIRED, tile());
                 } else {
                     navigateTowardsTarget();
                     tryMoving();
                     jumpAnimation.tick();
                 }
-                break;
             }
-
-            case STATE_EATEN: {
-                if (--eatenTimer == 0) {
+            case STATE_EATEN -> {
+                if (countdown == 0) {
                     setInactive();
                     Logger.trace("Bonus expired: {}", this);
                     publishGameEvent(level.game(), GameEventType.BONUS_EXPIRED, tile());
+                } else {
+                    --countdown;
                 }
-                break;
             }
-
-            default:
-                throw new IllegalStateException();
+            default -> throw new IllegalStateException("Unknown bonus state: " + state);
         }
     }
 }
